--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "𝐒ᴏɴᴀʟɪ 𝐌ᴜsɪᴄ",
     "description": "A Telegram Music Player Bot, written in Python with Pyrogram and Py-Tgcalls.",
-    "logo": "https://telegra.ph/file/a852ad09c23571d37d603.jpg",
+    "logo": "https://files.catbox.moe/bs0s02.jpg",
     "keywords": [
     "python3",
     "telegram",
